positionning radian value, calculate width of each line and organize my js to make it cleanner, js: myApp.init(), event on click make work the first part

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -2,12 +2,21 @@ $position: absolute;
 $bottom: 50%;
 
 
+
 @mixin transform-rotation($rotate-value) {
     transform: rotateZ($rotate-value * 3.142rad);
     
 }
 @mixin transform-deg($rotate-value) {
     transform: rotateZ($rotate-value * 1deg);
+    
+}
+@mixin adjacent-side($cos) {
+    width: (160px) * $cos;
+    
+}
+@mixin opposite-side($sin) {
+    width: (160px) * $sin;
     
 }
 
