js organise, js find randmoly one element addClass and change the css

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,4 @@
-@import 'partials/_setup';
-@import 'partials/_global';
-@import 'partials/_nav'; 
-@import 'partials/_index'; 
+@import 'partials/setup';
+@import 'partials/global';
+@import 'partials/nav'; 
+@import 'partials/index'; 
