--- a/styles/style.css
+++ b/styles/style.css
@@ -228,8 +228,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   transform: rotateZ(90deg);
   width: 160px;
   bottom: 50%;
-  left: calc(0% - 56px);
-  display: block; }
+  left: calc(0% - 56px); }
 
 .vertical2 {
   position: absolute;
@@ -276,10 +275,6 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   bottom: 50%;
   left: 159.14px; }
 
-/* .line-red .line{
-        @include opposite-side(1.42);
-        
-} */
 .horizontal1 {
   position: absolute;
   top: 21.43px;
@@ -319,24 +314,88 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 .line-red, .line-green, .line-blue {
   display: none; }
 
+.red-cos, .red-sin {
+  position: absolute;
+  color: red; }
+
+.green-cos, .green-sin {
+  position: absolute;
+  color: green; }
+
+.blue-cos, .blue-sin {
+  position: absolute;
+  color: blue; }
+
+.blue-cos-value-pos {
+  right: 80px;
+  top: 47%; }
+
+.blue-sin-value-neg {
+  left: 51%;
+  bottom: -10px; }
+
+.blue-cos-value-neg {
+  top: 46%;
+  left: 82px; }
+
+.blue-sin-value-pos {
+  left: 51%;
+  top: -10px; }
+
+.red-cos-value-pos {
+  left: 51%;
+  top: 15px; }
+
+.red-cos-value-neg {
+  bottom: 11px;
+  left: 51%; }
+
+.red-sin-value-neg {
+  top: 39%;
+  left: 47px; }
+
+.red-sin-value-pos {
+  top: 39%;
+  right: 46px; }
+
+.red-cos, .red-sin {
+  position: absolute;
+  color: red; }
+
+.green-cos-value-pos {
+  right: 11px;
+  top: 48%; }
+
+.green-cos-value-neg {
+  left: 23px;
+  top: 47%; }
+
+.green-sin-value-neg {
+  left: 51%;
+  bottom: 45px; }
+
+.green-sin-value-pos {
+  top: 14%;
+  left: 50%; }
+
 .redPi {
   position: absolute;
   color: red; }
 
 #red-value1 {
-  right: 20px;
+  right: 15px;
   top: 25px; }
 
 #red-value2 {
-  left: 20px;
+  left: 10px;
   top: 26px; }
 
 #red-value3 {
-  bottom: 20px;
+  bottom: 10px;
   left: 20px; }
 
 #red-value4 {
-  right: 20px;
+  right: 7px;
   bottom: 23px; }
 
 .greenPi {
@@ -345,18 +404,18 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 #green-value1 {
   top: 57px;
-  right: 0; }
+  right: -15px; }
 
 #green-value2 {
   top: 55px;
-  left: -5px; }
+  left: -15px; }
 
 #green-value3 {
   bottom: 55px;
-  left: -5px; }
+  left: -15px; }
 
 #green-value4 {
-  right: -14px;
+  right: -22px;
   bottom: 55px; }
 
 .bluePi {
@@ -364,15 +423,20 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   color: blue; }
 
 #blue-value1 {
-  right: 50px; }
+  top: -10px;
+  right: 49px; }
 
 #blue-value2 {
-  left: 55px; }
+  left: 49px;
+  top: -10px; }
 
 #blue-value3 {
-  bottom: 0;
+  bottom: -15px;
   left: 55px; }
 
 #blue-value4 {
-  bottom: 0;
+  bottom: -15px;
   right: 55px; }
+
+.active {
+  display: block; }
