--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -47,6 +47,15 @@
 
         
 }
+.line-green{
+        color:green;
+}
+.line-blue{
+        color:blue;
+}
+.line-red{
+        color:red
+}
 .oblique135{
         position: $position;
         @include transform-deg(45);
@@ -261,6 +270,7 @@
         position:$position;
         color:green;
 }
+
 #green-value1{
         top: 57px;
         right: -15px;
@@ -306,4 +316,10 @@
 .active-question{
         color: white;
         border: 1px solid black;
+}
+.notUsed{
+        display:none; 
+}
+ul{
+        list-style:none;
 }
