--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,10 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   margin: 0 auto; }
 
 .wrapper {
-  width: 80%;
+  width: 98%;
+  -webkit-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  transform: scale(0.9);
   margin: 0 auto; }
 
 .container {
@@ -462,3 +465,8 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 ul {
   list-style: none; }
+
+footer p {
+  background-color: grey;
+  padding: 1%;
+  text-align: center; }
