--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,7 @@
 @import 'partials/setup';
 @import 'partials/global';
-@import 'partials/nav'; 
+@import 'partials/circle';
 @import 'partials/index'; 
+@import 'partials/responsive';
+@import 'partials/header';
+@import 'partials/footer';
