--- a/styles/partials/_circle.scss
+++ b/styles/partials/_circle.scss
@@ -37,7 +37,10 @@
         
 }
 
-
+.theFeedBack p{
+        text-align:center;
+        text-transform:uppercase;
+}
 
 //OBLIQUE LINES
 .oblique135{
