--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,10 +1,11 @@
+
 footer{
-        bottom:0;
-        width: 100%;
+        display:none;
 }
 footer p{
         background-color: grey;
         padding: 1%;
         text-align: center;
         margin:0;
+        display:none;
 }
