--- a/styles/partials/_responsive.scss
+++ b/styles/partials/_responsive.scss
@@ -6,16 +6,14 @@
 }
 @media screen and (min-width: 768px){
         .wrapper{
-                transform:scale(1.38);
+                transform:scale(1.15);
                 max-width: 75%;
         }
         
-        #start{
-                width: 40%
-        }
-	.feedback{
-		margin-top:15%;
-	}
+        /* #start{
+                width: 3rem
+        } */
+	
 }
 @media screen and (min-width: 1000px){
 
